# ml-notebook

./: .gitattributes  README.md  pyproject.toml
notes/: decision_tree.ipynb
src/models/: decision_tree.py
src/utils/: metrics.py
