[project]
name = "ml-notebook"
version = "0.1.0"
description = "Machine learning algorithms implemented from scratch."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "jupyterlab>=4.2",
  "ipykernel",
  "statistics",
  "scikit-learn",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"